// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (WISPr With OWE) diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="WisprOwe"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (WISPr With PSK) diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="WisprPsk"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (WISPr With alwaysAccept & OWE) diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="WisprAlwaysAcceptOwe"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (WISPr With alwaysAccept & PSK) diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="WisprAlwaysAcceptPsk"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (WISPr with alwaysAccept) diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="WisprAlwaysAccept"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (WISPr) diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="Wispr"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (Workflow with OWE) diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="WorkflowAcctoffOwe"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (Workflow with PSK) diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="WorkflowAcctoffPsk"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (Workflow with accounting proxy and OWE) diagram successfully 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c1 svg {
  width: 16px;
  height: 16px;
}

.c1 svg:before {
  content: 'a';
}

.c1 svg path {
  color: var(--acx-primary-black);
}

.c1.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c1.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c1[disabled] svg path,
.c1.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c1[disabled].ant-btn-link svg path,
.c1.ant-btn-disabled.ant-btn-link svg path,
.c1[disabled].ant-btn-default svg path,
.c1.ant-btn-disabled.ant-btn-default svg path,
.c1[disabled].ant-btn-primary svg path,
.c1.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

.c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="WorkflowAcctproxyOwe"
        />
      </div>
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
        style="display: flex; justify-content: center;"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <button
            class="ant-btn ant-btn-link c1"
            disabled=""
            type="button"
          >
            <span>
              Authentication Service
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn ant-btn-link c1"
            type="button"
          >
            <span>
              Accounting Service
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (Workflow with accounting proxy and PSK) diagram successfully 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c1 svg {
  width: 16px;
  height: 16px;
}

.c1 svg:before {
  content: 'a';
}

.c1 svg path {
  color: var(--acx-primary-black);
}

.c1.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c1.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c1[disabled] svg path,
.c1.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c1[disabled].ant-btn-link svg path,
.c1.ant-btn-disabled.ant-btn-link svg path,
.c1[disabled].ant-btn-default svg path,
.c1.ant-btn-disabled.ant-btn-default svg path,
.c1[disabled].ant-btn-primary svg path,
.c1.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

.c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="WorkflowAcctproxyPsk"
        />
      </div>
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
        style="display: flex; justify-content: center;"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <button
            class="ant-btn ant-btn-link c1"
            disabled=""
            type="button"
          >
            <span>
              Authentication Service
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn ant-btn-link c1"
            type="button"
          >
            <span>
              Accounting Service
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (Workflow with accounting proxy) diagram successfully 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c1 svg {
  width: 16px;
  height: 16px;
}

.c1 svg:before {
  content: 'a';
}

.c1 svg path {
  color: var(--acx-primary-black);
}

.c1.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c1.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c1.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c1[disabled] svg path,
.c1.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c1[disabled].ant-btn-link svg path,
.c1.ant-btn-disabled.ant-btn-link svg path,
.c1[disabled].ant-btn-default svg path,
.c1.ant-btn-disabled.ant-btn-default svg path,
.c1[disabled].ant-btn-primary svg path,
.c1.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

.c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="WorkflowAcctproxyNone"
        />
      </div>
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
        style="display: flex; justify-content: center;"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <button
            class="ant-btn ant-btn-link c1"
            disabled=""
            type="button"
          >
            <span>
              Authentication Service
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn ant-btn-link c1"
            type="button"
          >
            <span>
              Accounting Service
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (Workflow with accounting service and OWE) diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="WorkflowAcctonOwe"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (Workflow with accounting service and PSK) diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="WorkflowAcctonPsk"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (Workflow with accounting service) diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="WorkflowAcctonNone"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (Workflow) diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="WorkflowAcctoffNone"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal default diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Captive Portal"
          src="ClickThrough"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - DPSK should render DPSK diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          alt="Dynamic Pre-Shared Key (DPSK)"
          src="Dpsk"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Hotspot20 should render Hotspot20 diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          src="Hotspot20"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram should render default diagram successfully 1`] = `
<DocumentFragment>
  .c0 {
  width: 358px;
  margin-top: 40px;
}

<div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="c0"
      >
        <img
          src="None"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
